--- a/solucao_final/Yaml/azure-pipelines.yml
+++ b/solucao_final/Yaml/azure-pipelines.yml
@@ -18,7 +18,6 @@ steps:
 - script: |
     python -m pip install --upgrade pip
     pip install requests
-    pip install json
     pip install openai==0.28
   displayName: 'Install dependencies'
 
@@ -28,4 +27,6 @@ steps:
 
   env:
     ACCESS_TOKEN: $(SYSTEM_ACCESSTOKEN)
-    OPENAI_API_KEY: $(OPENAI_API_KEY)
+    AZURE_OPENAI_API_KEY: $(AZURE_OPENAI_API_KEY)
+    AZURE_OPENAI_ENDPOINT: $(AZURE_OPENAI_ENDPOINT)
+    AZURE_OPENAI_DEPLOYMENT_NAME: $(AZURE_OPENAI_DEPLOYMENT_NAME)
